# gtsam_simple_custom_factor

./: .gitignore  CMakeLists.txt
2d_plane_test/: main.cpp
classes/: calculate_transformation.cpp  depth_factor.cpp  odom_factor.cpp  odom_factor2d.cpp  odom_factor_2d.cpp  plane_factor.cpp
include/: calculate_transformation.h  custom_node.h  custom_node_2d.h  depth_factor.h  odom_factor.h  odom_factor2d.h  odom_factor_2d.h  plane_factor.h
src/: main.cpp
test/: main.cpp
